Fix donate layout spacing (#816)
* Add donation column spacing

* Cap column at form size

* Override general 100% width

--- a/assets/less/pages/donations.less
+++ b/assets/less/pages/donations.less
@@ -14,6 +14,8 @@
     flex-direction: row;
     gap: 2rem;
     margin: auto;
+    padding-inline: 2rem;
+    width: auto;
 
     @media (max-width: @lg) {
       flex-direction: column;
@@ -40,7 +42,7 @@
       justify-content: center;
       align-items: center;
       text-align: center;
-      min-width: 50%;
+      min-width: 45%;
       min-height: 480px;
 
 
